--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-template",
+  "name": "suemor-core",
   "version": "0.0.1",
   "description": "",
   "author": "suemor <https://suemor.com>",
